--- a/Mapping_Multiple_Points/index.html
+++ b/Mapping_Multiple_Points/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mapping_Single_Points</title>
+    <title>Mapping_Multiple_Points</title>
     <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
     crossorigin=""/>
@@ -23,6 +23,7 @@
     <!-- API key -->
     <script type="text/javascript" src="static/js/config.js"></script>
     <!-- Our JavaScript -->
+    <script type="text/javascript" src="static/js/cities.js"></script>
     <script type="text/javascript" src="static/js/logic.js"></script>
        
 </body>
